--- a/Curiculum Vitae.html
+++ b/Curiculum Vitae.html
@@ -25,7 +25,7 @@
                 <li><a href="#">Hobbies</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Collaboration</a></li>
               </ul>
             </div>
             <i class="fas fa-bars"></i>
